[iOS] Element::focus and Element::scrollIntoView do not clamp scroll positions https://bugs.webkit.org/show_bug.cgi?id=197211

Reviewed by Simon Fraser.

Source/WebCore:

Fixed the bug that Element::focus and Element::scrollIntoView were not clamping scroll offsets,
which causes scrollTop etc... to return a bogus negative scrolling offset.

Unfortunately, we can't just use FrameView's ScrollableArea::constrainScrollPosition since
scrollRectToVisible relies on the visible rect being expanded by the content insets in order to scroll to
a position within the content insets of UIScrollView; e.g. revealing the top of the page as the center.
We manually expand minimumScrollPosition() and maximumScrollPosition() by the content insets instead.

Tests: fast/scrolling/ios/programmatic-scroll-via-focus-should-clamp-top.html
       fast/scrolling/ios/programmatic-scroll-via-scrollIntoView-inside-iframe-should-clamp-top.html
       fast/scrolling/ios/programmatic-scroll-via-scrollIntoView-should-clamp-top.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::scrollRectToVisible):

LayoutTests:

Added tests for scrolling via Element.prototype.focus and Element.prototype.scrollIntoView.

* fast/scrolling/ios/programmatic-scroll-via-focus-should-clamp-top-expected.txt: Added.
* fast/scrolling/ios/programmatic-scroll-via-focus-should-clamp-top.html: Added.
* fast/scrolling/ios/programmatic-scroll-via-scrollIntoView-inside-iframe-should-clamp-top-expected.txt: Added.
* fast/scrolling/ios/programmatic-scroll-via-scrollIntoView-inside-iframe-should-clamp-top.html: Added.
* fast/scrolling/ios/programmatic-scroll-via-scrollIntoView-should-clamp-top-expected.txt: Added.
* fast/scrolling/ios/programmatic-scroll-via-scrollIntoView-should-clamp-top.html: Added.
* platform/ios-wk2/fast/dom/focus-contenteditable-expected.txt: Rebaselined the output now that the scroll position
is properly clamped.
* platform/ios-wk2/imported/w3c/web-platform-tests/css/cssom-view/elementFromPoint-expected.txt: Rebaselined as one
more test case is passing.


Canonical link: https://commits.webkit.org/211653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244851 268f45cc-cd09-0410-ab3c-d52691b4dbfc